# fws-nwi

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
examples/: collection.json  item.json
examples/DC/: DC.json  DC_Wetlands.geoparquet  DC_Wetlands_Historic_Map_Info.geoparquet  DC_Wetlands_Project_Metadata.geoparquet  District_of_Columbia.geoparquet
extension/: README.md  schema.json
scripts/: create_examples.py  create_items.sh  test
src/stactools/fws_nwi/: __init__.py  commands.py  constants.py  content.py  geoparquet.py  metadata.py  parquet.py  shp.py  stac.py  states.py
tests/: __init__.py  conftest.py  context.py  test_commands.py  test_geoparquet.py  test_metadata.py  test_module.py  test_stac.py
tests/data-files/: DC_shapefile_wetlands.json  collection.json
