[metadata]
name = stactools-fws-nwi
version = attr: stactools.fws_nwi.__version__
description = stactools package for the National Wetlands Inventory (NWI) product provided by the U.S. Fish and Wildlife Service (FWS)
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/fws-nwi
project_urls =
    Issues = https://github.com/stactools-packages/fws-nwi/issues
keywords =
    stactools
    FWS
    NWI
    wetland
    deepwater
    habitats
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0
    python-dateutil >= 2.7.0
    types-python-dateutil >= 2.7.0
    pystac >= 1.6.1

[options.packages.find]
where = src
